--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,12 @@
   "theme_color": "#34675C",
   "icons": [
     {
+      "src": "favicon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
+    },
+    {
       "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
