--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,11 @@
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
+    },
+    {
+      "src": "apple-touch-icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
     }
   ]
 }
